fixed logo alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,9 @@ main {
   text-shadow: -2px 3px 6px rgb(44, 44, 44);
 }
 #teams {
-  text-align: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 #teams h3 {
   background-color: rgba(0,0,0,0.4);
@@ -50,6 +52,7 @@ main {
 }
 
 .box img{
+  margin: 0;
   width: 150px;
   height: auto;
   opacity: 0.5;
